# AI-Python-Server

./: README.md  app.py  config.py  docker-compose.yml  feature-request.md  magnet_utils.py  pyproject.toml
build-plan/: stage-1-verify-magnet-link.md  stage-2-qbittorrent-integration.md  stage-2.5-refactor-and-hardening.md  stage-3-cicd.md  stage-4-youtube-download-integration.md
logs/: submissions.jsonl
magnet/: __init__.py  resolve.py  utils.py
qbittorrent/: __init__.py  client.py
scripts/: start_stack.sh
storage/: __init__.py  jsonl.py
tests/: test_app_integration.py  test_config.py  test_magnet_utils.py  test_storage.py  test_youtube_client.py  test_youtube_utils.py
youtube/: __init__.py  client.py  utils.py
