[project]
name = "ai-python-server"
version = "0.1.0"
description = "magnet drop webpage for self-hosted torrent machine"
dependencies = [
    "flask>=3.0",
    "pytest>=8.0",
    "requests>=2.32",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["magnet"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]