[project]
name = "ai-python-server"
version = "0.1.0"
description = "magnet drop webpage for self-hosted torrent machine"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.0",
    "requests>=2.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["magnet"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]